--- a/src/components/Game/theme.css
+++ b/src/components/Game/theme.css
@@ -476,9 +476,10 @@ BUTTON STYLING
 
 .btn {
 position: relative;
-color: white;
+color: rgba(12, 74, 243, 0.52);
 width: 256px;
 height: 64px;
+font-weight:900;
 line-height: 64px;
 transition: all 0.3s;
 }
@@ -526,6 +527,7 @@ opacity: 0;
 /* BTN TWO */
 .btn-two::before, .btn-two::after {
 content: '';
+color:black;
 position: absolute;
 width: 100%;
 height: 100%;
